gradle-final-v3.txt

> Configure project :app
WARNING: The option setting 'android.defaults.buildfeatures.buildconfig=true' is deprecated.
The current default is 'false'.
It will be removed in version 9.0 of the Android Gradle plugin.
You can resolve this warning in Android Studio via `Refactor` > `Migrate BuildConfig to Gradle Build Files`
WARNING: Using flatDir should be avoided because it doesn't support any meta-data formats.

> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :capacitor-android:preBuild UP-TO-DATE
> Task :capacitor-android:preDebugBuild UP-TO-DATE
> Task :capacitor-android:generateDebugResValues UP-TO-DATE
> Task :capacitor-android:generateDebugResources UP-TO-DATE
> Task :capacitor-android:packageDebugResources UP-TO-DATE
> Task :capacitor-app:preBuild UP-TO-DATE
> Task :capacitor-app:preDebugBuild UP-TO-DATE
> Task :capacitor-app:generateDebugResValues UP-TO-DATE
> Task :capacitor-app:generateDebugResources UP-TO-DATE
> Task :capacitor-app:packageDebugResources UP-TO-DATE
> Task :capacitor-splash-screen:preBuild UP-TO-DATE
> Task :capacitor-splash-screen:preDebugBuild UP-TO-DATE
> Task :capacitor-splash-screen:generateDebugResValues UP-TO-DATE
> Task :capacitor-splash-screen:generateDebugResources UP-TO-DATE
> Task :capacitor-splash-screen:packageDebugResources UP-TO-DATE
> Task :capacitor-status-bar:preBuild UP-TO-DATE
> Task :capacitor-status-bar:preDebugBuild UP-TO-DATE
> Task :capacitor-status-bar:generateDebugResValues UP-TO-DATE
> Task :capacitor-status-bar:generateDebugResources UP-TO-DATE
> Task :capacitor-status-bar:packageDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :capacitor-android:writeDebugAarMetadata UP-TO-DATE
> Task :capacitor-app:writeDebugAarMetadata UP-TO-DATE
> Task :capacitor-splash-screen:writeDebugAarMetadata UP-TO-DATE
> Task :capacitor-status-bar:writeDebugAarMetadata UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-android:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-android:processDebugManifest UP-TO-DATE
> Task :capacitor-app:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-app:processDebugManifest UP-TO-DATE
> Task :capacitor-splash-screen:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-splash-screen:processDebugManifest UP-TO-DATE
> Task :capacitor-status-bar:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-status-bar:processDebugManifest UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :capacitor-android:compileDebugLibraryResources UP-TO-DATE
> Task :capacitor-android:parseDebugLocalResources UP-TO-DATE
> Task :capacitor-android:generateDebugRFile UP-TO-DATE
> Task :capacitor-app:compileDebugLibraryResources UP-TO-DATE
> Task :capacitor-app:parseDebugLocalResources UP-TO-DATE
> Task :capacitor-app:generateDebugRFile UP-TO-DATE
> Task :capacitor-splash-screen:compileDebugLibraryResources UP-TO-DATE
> Task :capacitor-splash-screen:parseDebugLocalResources UP-TO-DATE
> Task :capacitor-splash-screen:generateDebugRFile UP-TO-DATE
> Task :capacitor-status-bar:compileDebugLibraryResources UP-TO-DATE
> Task :capacitor-status-bar:parseDebugLocalResources UP-TO-DATE
> Task :capacitor-status-bar:generateDebugRFile UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :capacitor-android:generateDebugBuildConfig UP-TO-DATE
> Task :capacitor-android:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-android:compileDebugJavaWithJavac UP-TO-DATE
> Task :capacitor-android:bundleLibCompileToJarDebug UP-TO-DATE
> Task :capacitor-app:generateDebugBuildConfig UP-TO-DATE
> Task :capacitor-app:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-app:compileDebugJavaWithJavac UP-TO-DATE
> Task :capacitor-app:bundleLibCompileToJarDebug UP-TO-DATE
> Task :capacitor-splash-screen:generateDebugBuildConfig UP-TO-DATE
> Task :capacitor-splash-screen:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-splash-screen:compileDebugJavaWithJavac UP-TO-DATE
> Task :capacitor-splash-screen:bundleLibCompileToJarDebug UP-TO-DATE
> Task :capacitor-status-bar:generateDebugBuildConfig UP-TO-DATE
> Task :capacitor-status-bar:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-status-bar:compileDebugJavaWithJavac UP-TO-DATE
> Task :capacitor-status-bar:bundleLibCompileToJarDebug UP-TO-DATE
> Task :app:compileDebugKotlin NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
C:\Users\PATRICK\OneDrive\Documentos\Desktop\codigo app\android\app\src\main\java\com\seringal\gestao\MainActivity.java:3: error: package com.getcapacitor does not exist
import com.getcapacitor.BridgeActivity;
                       ^
C:\Users\PATRICK\OneDrive\Documentos\Desktop\codigo app\android\app\src\main\java\com\seringal\gestao\MainActivity.java:5: error: cannot find symbol
public class MainActivity extends BridgeActivity {
                                  ^
  symbol: class BridgeActivity
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.6/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 2s
63 actionable tasks: 1 executed, 62 up-to-date
